--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
 
   
   <div class="gallery">
-    <div class="image Space"><img src="Space/119015_adapted_1080x2340_1744140210.jpg" alt="Space 1" onclick="openLightbox(this)" /></div>
-    <div class="image Cars"><img src="Space/166366_original_3985x5977.jpg" alt="Cars 1" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/1085456_adapted_1080x2340_1744139332.jpg" alt="Space 2" onclick="openLightbox(this)" /></div>
-    <div class="image Cars"><img src="Space/187619_original_3759x5638.jpg" alt="Cars 2" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/1356503_adapted_1080x2340_1744140668.jpg" alt="Space 3" onclick="openLightbox(this)" /></div>
-    <div class="image Cars"><img src="Space/192245_original_4016x6016.jpg" alt="Cars 3" onclick="openLightbox(this)" /></div>
-    <div class="image Cars"><img src="Space/192628_original_4027x6040.jpg" alt="Cars 4" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/IMG_20250215_010420_123.jpg" alt="Space 4" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/IMG_20250215_010420_150.jpg" alt="Space 5" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/IMG_20250215_010420_636.jpg" alt="Space 6" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/IMG_20250215_010420_775.jpg" alt="Space 7" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/IMG_20250215_010420_855.jpg" alt="Space 8" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/IMG_20250215_010422_269.jpg" alt="Space 9" onclick="openLightbox(this)" /></div>
-    <div class="image Space"><img src="Space/vsthemes-org (6).jpg" alt="Space 10" onclick="openLightbox(this)" /></div>
-        <div class="image Cars"><img src="Space/199288_original_4480x6720.jpg" alt="Cars 5" onclick="openLightbox(this)" /></div>
-        <div class="image Cars"><img src="Space/199350_original_2000x2500.jpg" alt="Cars 6" onclick="openLightbox(this)" /></div>
-        <div class="image Cars"><img src="Space/land-rover-defender-90-d240-se-4k--10487.jpg" alt="Cars 6" onclick="openLightbox(this)" /></div>
-        <div class="image Cars"><img src="Space/light-red-rain-front-view-2018-hd-wallpaper-preview.jpg" alt="Cars 6" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/119015_adapted_1080x2340_1744140210.jpg" alt="Space 1" onclick="openLightbox(this)" /></div>
+    <div class="image Cars"><img src="images/166366_original_3985x5977.jpg" alt="Cars 1" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/1085456_adapted_1080x2340_1744139332.jpg" alt="Space 2" onclick="openLightbox(this)" /></div>
+    <div class="image Cars"><img src="images/187619_original_3759x5638.jpg" alt="Cars 2" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/1356503_adapted_1080x2340_1744140668.jpg" alt="Space 3" onclick="openLightbox(this)" /></div>
+    <div class="image Cars"><img src="images/192245_original_4016x6016.jpg" alt="Cars 3" onclick="openLightbox(this)" /></div>
+    <div class="image Cars"><img src="images/192628_original_4027x6040.jpg" alt="Cars 4" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/IMG_20250215_010420_123.jpg" alt="Space 4" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/IMG_20250215_010420_150.jpg" alt="Space 5" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/IMG_20250215_010420_636.jpg" alt="Space 6" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/IMG_20250215_010420_775.jpg" alt="Space 7" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/IMG_20250215_010420_855.jpg" alt="Space 8" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/IMG_20250215_010422_269.jpg" alt="Space 9" onclick="openLightbox(this)" /></div>
+    <div class="image Space"><img src="images/vsthemes-org (6).jpg" alt="Space 10" onclick="openLightbox(this)" /></div>
+        <div class="image Cars"><img src="images/199288_original_4480x6720.jpg" alt="Cars 5" onclick="openLightbox(this)" /></div>
+        <div class="image Cars"><img src="images/199350_original_2000x2500.jpg" alt="Cars 6" onclick="openLightbox(this)" /></div>
+        <div class="image Cars"><img src="images/land-rover-defender-90-d240-se-4k--10487.jpg" alt="Cars 6" onclick="openLightbox(this)" /></div>
+        <div class="image Cars"><img src="images/light-red-rain-front-view-2018-hd-wallpaper-preview.jpg" alt="Cars 6" onclick="openLightbox(this)" /></div>
 
   </div>
 
